--- a/src/html/test.html
+++ b/src/html/test.html
@@ -3,7 +3,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 </head>
 <body>
-    <h1>This is a test loading (delayed) data through PHP API using JS with AJAX</h1>
+    <h1>This is a test loading (delayed) data through PHP API using JS with AJAX and also sending queries via PHP</h1>
+    <p>Through JavaScript</p>
     <div id="data"></div>
+    <p></p>
     <script src="test.js"></script>
 </body>
